--- a/firstApp/app/src/main/res/layout/activity_main.xml
+++ b/firstApp/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+activity_main.xml is a crucial file in Android development,
+specifically for defining the user interface (UI) of your application's main screen
+(or any other screen, depending on the file's name).
+-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
