--- a/ExplicitIntent/app/src/main/res/layout/activity_second.xml
+++ b/ExplicitIntent/app/src/main/res/layout/activity_second.xml
@@ -41,5 +41,15 @@
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="msg:"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
